--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
+    "ng2-dragula": "^1.5.0",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
